Bug 293378 - "content #" styles show "+" even when they shouldn't
Summary: "content #" styles show "+" even when they shouldn't
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4-snapshots
Platform: Chakra Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-05 17:18 UTC by Giuseppe Calà
Modified: 2012-12-01 16:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Giuseppe Calà 2012-02-05 17:18:28 UTC
Version:           2.4-snapshots (using KDE 4.8.0) 
OS:                Linux

In beta 7: standard style doesn't show the "+" button unless it follows a heading paragraph.

Reproducible: Always

Steps to Reproduce:
In a new document create a sample paragraph and apply the standard style

Actual Results:  
the style doesn't show the "+" (add style) button

Expected Results:  
it should show the "+" button

Instead, try this:

In a new document insert some text, change is paragraph style to, say, Heading 1, then press enter to begin a new paragraph; the new paragraph is Standard with the "+" button.
Comment 1 Camilla Boemann 2012-02-05 17:32:05 UTC
Actually that is how it's supposed to work.

The plus sign is only shown if you have applied direct formatting. And you having just applied a paragraph style there should be no direct formatting whatsoever
Comment 2 Giuseppe Calà 2012-02-05 17:39:47 UTC
Then there is a a problem with "contents #" styles. If in a new document you insert some text and then apply, say, "contents 1" it shows the plus button; comparing this two behaviours I have opted to file this bug.
Comment 3 Camilla Boemann 2012-02-05 17:45:18 UTC
Fair enough. Reopening and renaming
Comment 4 Giuseppe Calà 2012-02-05 18:02:32 UTC
How to show plus button for heading styles?

Maybe, I'm sissing the meaning of "direct formatting"
Comment 5 Camilla Boemann 2012-02-05 18:08:13 UTC
Well there is styles and then there is direct formatting on top of that.

Both can set for example set the: left,center,right,justified

if you push the buttons in the sidebar you are making directformatting. And direct formatting affect only your currenctly selected paragraph(s)

If on the other hand you edit a style (in the style manager) and change the left,center etc there it affects all paragraphs that has the style assigned (unless it's shadowed by direct formatting)
Comment 6 Giuseppe Calà 2012-02-05 18:22:34 UTC
ok, but the plus button when should appear? As it is now, it appears when passing automatically from a style to the next (f.i., passing automatically from heading 1 to Standard pressing enter, this one shows the plus button).
Comment 7 Camilla Boemann 2012-02-05 18:28:04 UTC
It's not suppposed to show in that case, only if you actually add direct formating. But we are well aware that it shows too often.
Comment 8 Giuseppe Calà 2012-02-05 18:33:33 UTC
ok, understood (atm, alignment and indentation should show the plus button).

Very thanks
Comment 9 Pierre Stirnweiss 2012-12-01 16:08:49 UTC
Git commit 6ca4bdf30bcf953ac3b13e0daeb35d3590332d0b by Pierre Stirnweiss.
Committed on 01/12/2012 at 17:05.
Pushed by pstirnweiss into branch 'master'.

Fix style appears modified after new line following a list style.
FIXED-IN: 2.6
REVIEW: 107540

Squashed commit of the following:

commit e8e9407c088577aff79e28cd2262c0f02c29cbc7
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Dec 1 14:07:50 2012 +0100

    Clean up

commit 4a31b7e1fe79fbd959cadbcaeb33bafe115f6d6e
Merge: 677be5e fc4b005
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Dec 1 13:54:43 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit 677be5ea17fa68da4cd171ec5d0a5a7f1be87556
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Dec 1 13:21:13 2012 +0100

    Fix next style appears as modified after a list style

commit 31cdb8e0ad6ee2ea0a42894933a2db48c543aab1
Merge: bd699d1 f3ae109
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Wed Nov 28 18:28:01 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit bd699d1bbf8c837505ebe19c5c0fc7cbc307ca11
Merge: 15e1a5c c98e784
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Tue Nov 27 20:14:12 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit 15e1a5c348a09e516fa5b3e58525e9f4440060a1
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Tue Nov 27 17:58:17 2012 +0100

    Fix problems highlighted by C. Boemann

commit fe4de0d618eb6c6dd83ab07f8641f6e24cfd55fc
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Mon Nov 26 18:43:33 2012 +0100

    Clean-up left-over

commit 1e40dfdc986eb2bc9114684a20aa5ec60db77d2d
Merge: ea8cdb0 82cc058
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sun Nov 25 10:19:14 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit ea8cdb0e14e6805b4082ffd0929c8b1b344c82f4
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Nov 24 15:02:15 2012 +0100

    Additional clean ups

commit 6308ed4fd70aa99ccd5214806f370423ca5b7015
Merge: d306e00 81b50ca
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Nov 24 14:49:45 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit d306e009525c97d2c7e1706a47ec267d7e994c8c
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Nov 24 14:48:09 2012 +0100

    Clean ups in the code

commit 231e717b0c1c7dbec984679e0fb07dc821f8e889
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sun Nov 11 13:03:26 2012 +0100

    Fix another crash

commit c37b513c5b4f9c09345848f2885f4eac24791008
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sun Nov 11 12:42:08 2012 +0100

    Fix random crash.

commit 0a9c5e3464c39e45eeeb26b1c65643bdb63fca32
Merge: 8e675f4 e6c1c31
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Nov 10 17:07:22 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit 8e675f4d1b66eda355e994c0c88b6ac67337bca3
Merge: bcb9fbd 6c7d9e1
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Nov 10 15:54:06 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit bcb9fbd767aa2c4b7e5670ab2546797e9cf3e42b
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Nov 10 15:52:53 2012 +0100

    Initial population of style, a tad further.

commit fbbcf132764ca9a60b59e46aa844df918aa8fd05
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Mon Oct 22 21:36:20 2012 +0200

    Add missing bits to previous commit

commit 889e39862888ef83dc052604746611c959352bf0
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sun Oct 21 23:39:14 2012 +0200

    Create filter for stylesCombo in the docker

M  +11   -0    libs/kotext/KoList.cpp
M  +0    -1    libs/kotext/styles/KoParagraphStyle.cpp

http://commits.kde.org/calligra/6ca4bdf30bcf953ac3b13e0daeb35d3590332d0b
Comment 10 Camilla Boemann 2012-12-01 16:41:15 UTC
Git commit 863f8e6c080131c34572e6a8ee293c8d19cd1f70 by C. Boemann, on behalf of Pierre Stirnweiss.
Committed on 01/12/2012 at 17:05.
Pushed by boemann into branch 'calligra/2.6'.

Fix style appears modified after new line following a list style.
FIXED-IN: 2.6
REVIEW: 107540

Squashed commit of the following:

commit e8e9407c088577aff79e28cd2262c0f02c29cbc7
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Dec 1 14:07:50 2012 +0100

    Clean up

commit 4a31b7e1fe79fbd959cadbcaeb33bafe115f6d6e
Merge: 677be5e fc4b005
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Dec 1 13:54:43 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit 677be5ea17fa68da4cd171ec5d0a5a7f1be87556
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Dec 1 13:21:13 2012 +0100

    Fix next style appears as modified after a list style

commit 31cdb8e0ad6ee2ea0a42894933a2db48c543aab1
Merge: bd699d1 f3ae109
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Wed Nov 28 18:28:01 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit bd699d1bbf8c837505ebe19c5c0fc7cbc307ca11
Merge: 15e1a5c c98e784
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Tue Nov 27 20:14:12 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit 15e1a5c348a09e516fa5b3e58525e9f4440060a1
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Tue Nov 27 17:58:17 2012 +0100

    Fix problems highlighted by C. Boemann

commit fe4de0d618eb6c6dd83ab07f8641f6e24cfd55fc
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Mon Nov 26 18:43:33 2012 +0100

    Clean-up left-over

commit 1e40dfdc986eb2bc9114684a20aa5ec60db77d2d
Merge: ea8cdb0 82cc058
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sun Nov 25 10:19:14 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit ea8cdb0e14e6805b4082ffd0929c8b1b344c82f4
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Nov 24 15:02:15 2012 +0100

    Additional clean ups

commit 6308ed4fd70aa99ccd5214806f370423ca5b7015
Merge: d306e00 81b50ca
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Nov 24 14:49:45 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit d306e009525c97d2c7e1706a47ec267d7e994c8c
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Nov 24 14:48:09 2012 +0100

    Clean ups in the code

commit 231e717b0c1c7dbec984679e0fb07dc821f8e889
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sun Nov 11 13:03:26 2012 +0100

    Fix another crash

commit c37b513c5b4f9c09345848f2885f4eac24791008
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sun Nov 11 12:42:08 2012 +0100

    Fix random crash.

commit 0a9c5e3464c39e45eeeb26b1c65643bdb63fca32
Merge: 8e675f4 e6c1c31
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Nov 10 17:07:22 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit 8e675f4d1b66eda355e994c0c88b6ac67337bca3
Merge: bcb9fbd 6c7d9e1
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Nov 10 15:54:06 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit bcb9fbd767aa2c4b7e5670ab2546797e9cf3e42b
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Nov 10 15:52:53 2012 +0100

    Initial population of style, a tad further.

commit fbbcf132764ca9a60b59e46aa844df918aa8fd05
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Mon Oct 22 21:36:20 2012 +0200

    Add missing bits to previous commit

commit 889e39862888ef83dc052604746611c959352bf0
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sun Oct 21 23:39:14 2012 +0200

    Create filter for stylesCombo in the docker

M  +11   -0    libs/kotext/KoList.cpp
M  +0    -1    libs/kotext/styles/KoParagraphStyle.cpp

http://commits.kde.org/calligra/863f8e6c080131c34572e6a8ee293c8d19cd1f70